fixed h1 titles on ie7/8

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -808,7 +808,7 @@ ul.menu > li ul li a:hover{
 	color:#000;
 	font-family: "LaneNarrowRegular", Verdana, sans-serif;
 	font-size:18px;
-	padding-top:15px;
+	padding-top:7px;
 	padding-bottom:25px;
 }
 .generic_page h2 {
